# Camera

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TROUBLESHOOTING.md  VERSION.md  aarch64-toolchain.cmake  build.sh  clean.sh  download_models.sh  package.sh  test.sh
cmake/: FindONNX.cmake  FindOpenCV.cmake  FindPoco.cmake
cmake/toolchain/: aarch64-linux-gnu.cmake
docs/api/: README.md
docs/architecture/: README.md
examples/: CMakeLists.txt  README.md
examples/test_fltk/: CMakeLists.txt  README.md  test_fltk.cpp
examples/test_gtk/: CMakeLists.txt  README.md  test_gtk.cpp
examples/test_gui/: CMakeLists.txt  README.md  test_gui.cpp
examples/test_onnx/: CMakeLists.txt  test_onnx.cpp
examples/test_v4l2/: CMakeLists.txt  test_v4l2.cpp
examples/test_websocket/: CMakeLists.txt  test_websocket.cpp
examples/test_wx/: CMakeLists.txt  README.md  test_wx.cpp
include/: README.md  capture_interface.h  ffmpeg_capture.h  gst_capture.h  image_processor.h  v4l2_capture.h  version.h  video_capture.h  web_server.h  websocket_handler.h
scripts/: build_onnxruntime.sh  download_deps.sh  reset_project.sh
src/: README.md  gst_capture.cpp  image_processor.cpp  main.cpp  v4l2_capture.cpp  video_capture.cpp  web_server.cpp
